stats, dropdowns, footers, oh my!
